# IntentText

./: .gitignore  .npmrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  FINALIZATION.md  INTEGRATION.md  LICENSE  PRIVACY.md  README.md  RECOMMENDED-KEYWORDS.md  ROADMAP.md  SECURITY.md  SPEC.md  cli.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preview.html
.github/: dependabot.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: fs.rs  identity.rs  mod.rs  print.rs  settings.rs  workspace.rs
assessment/: ASSESSMENT.md  ERP-FIT.md  FORMAT-REVIEW.md  FORMAT-ROADMAP.md  IMPROVEMENT-PLAN.md  OWNER-ACTIONS.md  RUST-WASM-CORE-PLAN.md
docs/: DocumentGenerationEngine.md  MIGRATION.md  SPEC.md  TEMPLATES.md  USAGE.md
examples/: .it-index  README.md  api-docs.it  arabic-test.it  contract-sealed.it  demo.js  expense-report-data.json  expense-report-template.it  feasibility-medad.it  intake-form-filled.it  intake-form.it  invoice.it  meeting-notes.it  prd-editor.it  project-tasks.it  quotation-ar.it  routed-approval.it  sample-output.html  sample.html  sample.it  simple.it  styling-demo.it  tender-boq.it  v1.2-demo.it
scripts/: check-doc-accuracy.cjs  check-example-seals.mjs  check-examples.mjs
todo/: NEXT_RELEASE_PLAN.md  core-update-rules.md  roadmap-2026-monorepo.md  v3-release-notes-draft.md  v3-unified-execution-plan.md  v3.3-implicit-text-plan.md  (+2 more)
verify/: README.md  (+2 more)
(+484 files in other folders)
