[package]
name = "intenttext-desktop"
version = "2.0.0"
description = "Dotit Desktop — enterprise document manager for .it files"
authors = ["Dotit Labs"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
notify = { version = "7", features = ["macos_fsevent"] }
walkdir = "2"
trash = "5"

# macOS native print (NSPrintOperation) + app activation (NSApplication).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", features = ["NSPrintInfo", "NSPrintOperation", "NSApplication", "NSResponder"] }
objc2-web-kit = { version = "0.3.2", features = ["WKWebView", "objc2-app-kit"] }
